--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="TicTacToe.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
     <button class="undo" id="undo">
-      <img src="rotate-left-solid.svg" alt="" height="20px" width="20px" />
+      <img src="rotate-left-solid.svg" alt="" height="40px" width="40px" />
     </button>
     <div class="grid-container">
       <div class="tic-tac tic-0" data-number="0">O</div>
@@ -31,6 +31,6 @@
       <button class="restart">Restart</button>
     </div>
 
-    <script src="TicTacToe.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
